update jdt.core to I20190522-1800 for 2019-06 M3